@@ -1,4 +1,3 @@
-* use mpz_powm_sec-function from libgmp to improve resilience of spowm.c
 * use secure memory allocation from libgcrypt
 
 + add interactive versions of Chaum-Pedersen PoK of dlog equality
